syntax = "proto3";

package org.bian.protobuf;

import "spec.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "org.bian.protobuf";

service BindingService {
  rpc query (io.cloudevents.v1.CloudEvent) returns (io.cloudevents.v1.CloudEvent) {}
  rpc command (io.cloudevents.v1.CloudEvent) returns (google.protobuf.Empty) {}
}