/*
  Customer Offer

  This service domain orchestrates the processing of a product offer for a new or established &nbsp;customer. The offer process is defined specifically for the product or service being considered and can include actions such as document checks, collateral allocation, credit assessments, underwriting decisions, regulatory and procedural checks, eligibility checks, the use of internal and external specialist services (such as evaluations and legal advice).

  The version of the OpenAPI document: 10.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package com.redhat.mercury.customeroffer.v10;

import public "v10/model/initiate_customer_offer_procedure_request_agreement.proto";
import public "v10/model/initiate_customer_offer_procedure_request_audit.proto";
import public "v10/model/initiate_customer_offer_procedure_request_booking.proto";
import public "v10/model/initiate_customer_offer_procedure_request_compliance.proto";
import public "v10/model/initiate_customer_offer_procedure_request_correspondenceand_documents.proto";
import public "v10/model/initiate_customer_offer_procedure_request_credit.proto";
import public "v10/model/initiate_customer_offer_procedure_request_customer_offer_procedure.proto";
import public "v10/model/initiate_customer_offer_procedure_request_facility_application.proto";
import public "v10/model/initiate_customer_offer_procedure_request_underwriting.proto";

message InitiateCustomerOfferProcedureRequest {

  InitiateCustomerOfferProcedureRequestCustomerOfferProcedure CustomerOfferProcedure = 355289975;

  InitiateCustomerOfferProcedureRequestFacilityApplication FacilityApplication = 290362000;

  InitiateCustomerOfferProcedureRequestCredit Credit = 415930140;

  InitiateCustomerOfferProcedureRequestUnderwriting Underwriting = 365078308;

  InitiateCustomerOfferProcedureRequestCompliance Compliance = 381652029;

  InitiateCustomerOfferProcedureRequestAudit Audit = 63613883;

  InitiateCustomerOfferProcedureRequestBooking Booking = 118726716;

  InitiateCustomerOfferProcedureRequestCorrespondenceandDocuments CorrespondenceandDocuments = 369741661;

  InitiateCustomerOfferProcedureRequestAgreement Agreement = 241471000;

}
